fixes bug 199108 "Changes to cookie prefs need restart to take effect" patch=dwitte r=kaie sr=darin